# tealinux-installer

./: .code-workspace  .gitignore  README.md  TODO.md  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
rust-tests/: Cargo.toml
rust-tests/src/: error.rs  macros_ab.rs  main.rs  partition.rs  types.rs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: account.rs  auto_partition.rs  firmware.rs  keyboard.rs  locale.rs  mod.rs  os.rs  partition.rs  storage.rs  timezone.rs
src-tauri/src/installer/: blueprint.rs  mod.rs  payload.rs
src-tauri/src/installer/commands/: mod.rs
src-tauri/src/installer/fstab/: mod.rs
src-tauri/src/installer/internet/: mod.rs
src-tauri/src/installer/partitions/: mod.rs
src-tauri/src/installer/read/: mod.rs
src-tauri/src/installer/read/battery/: mod.rs
src-tauri/src/installer/read/lspci/: mod.rs
src-tauri/src/installer/read/memory/: mod.rs
src-tauri/src/installer/read/model/: mod.rs
src-tauri/src/installer/read/os/: mod.rs
src-tauri/src/installer/read/storage/: mod.rs
src-tauri/src/installer/step/: boot.rs  bootloader.rs  json.rs  microcode.rs  mkpart.rs  mod.rs  partitioning.rs
src-tauri/src/installer/timezone/: mod.rs
src-tauri/src/installer/utils/: mod.rs
src-tauri/src/read/: battery.rs  desktop_environment.rs  display_server.rs  kernel.rs  memory.rs  mod.rs  model.rs  online.rs  operating_system.rs  pci.rs
src-tauri/src/read/storage/: disk.rs  mod.rs  partition.rs
src-tauri/src/storage/: btrfs.rs  filesystem.rs  mod.rs
src-tauri/src/system/: mod.rs  reboot.rs  spawn.rs
src-tauri/src/utils/: command.rs  convert.rs  mod.rs  tea_partition_generator_convert.rs
src/lib/: essentials.js
src/lib/components/: DiskPreview.svelte  DiskSlider.svelte  Loading.svelte  Navigation.svelte  PartitionsSlider.svelte  SelectComponent.svelte  Sidebar.svelte  SummaryToAll.svelte  SysInfoSide.svelte  store.js
src/lib/components/layouts/: StepNavigation.svelte  TwoSide.svelte
src/lib/components/modals/: Error.svelte  Modal.svelte
src/lib/components/partitions/: ComponentSelect.svelte  Detail.svelte  List.svelte  Preview.svelte
src/lib/components/ui/: Button.svelte  GlowingText.svelte  Link.svelte
src/lib/stores/: informationStore.js  modalStore.js
src/routes/: +layout.svelte  +page.svelte
src/routes/host/: +page.svelte
src/routes/install/: +page.svelte  stores.js
src/routes/install/account/: +page.svelte
src/routes/install/locale/: +page.svelte
src/routes/install/partition/: +page.svelte
src/routes/install/timezone/: +page.svelte
src/routes/installation/: +layout.svelte  +page.svelte  global.js
src/routes/installation/aboutSystem/: +page.svelte
src/routes/installation/account/: +page.svelte
src/routes/installation/install/: +page.svelte
src/routes/installation/keyboard/: +page.svelte
src/routes/installation/locale/: +page.svelte
src/routes/installation/localization/: +page.svelte  Modal.svelte  Preview.svelte  SearchButton.svelte
src/routes/installation/partition/: +page.svelte
src/routes/installation/partition_auto/: +page.svelte
src/routes/installation/partition_old/: +page.svelte
src/routes/installation/partitioning/: +page.svelte  utils.js
src/routes/installation/partitioning/components/: Card.svelte  CardTextArea.svelte  PreviewButton.svelte
src/routes/installation/partitionv2/: +page.svelte
src/routes/installation/summary/: +page.svelte
src/routes/installation/timezone/: +page.svelte
src/routes/partitioning/: +page.svelte
src/routes/root/: +page.svelte
src/routes/user/: +page.svelte
(+5 files in other folders)
