[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "2", features = [] }
duct = "0.13.7"
online = "4.0.2"
sysinfo = "0.30.12"
users = "0.11.0"
battery = "0.7.8"
tea-partition-api-lib = { git = "https://github.com/tealinuxos/tea-partition-api-lib", branch = "main" }
tea-arch-chroot-lib = { git = "https://github.com/tealinuxos/tea-arch-chroot-lib" }
tea_partition_generator = { git = "https://github.com/tealinuxos/tea_partition_generator" }
uname = "0.1.1"
procfs = "0.17.0"
sudo = "0.6.0"
regex = "1.9.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
